--- a/views/templates.xml
+++ b/views/templates.xml
@@ -6,7 +6,7 @@
             <html>
             <head>
                 <t t-call="{{module_name}}.assets_css" />
-                <title>{{capitalize module_name}}</title>
+                <title>{{module_name}}</title>
             </head>
             <body>
                 <div id="app"></div>
