--- a/views/assets.xml
+++ b/views/assets.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<odoo>
+<openerp>
   <data>
     <template id="assets_css" name="assets_css"></template>
 
@@ -7,4 +7,4 @@
       <script src="/{{module_name}}/static/src/js/dist/build.js"></script>
     </template>
   </data>
-</odoo>
+</openerp>
