--- a/views/templates.xml
+++ b/views/templates.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<odoo>
+<openerp>
   <data>
     <template id="index" name="index">
       <html>
@@ -14,4 +14,4 @@
       </html>
     </template>
   </data>
-</odoo>
+</openerp>
