[FIX]reparado error de los font

--- a/views/assets.xml
+++ b/views/assets.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
   <data>
-    <template id="assets_css" name="assets_css"></template>
+    <template id="assets_css" name="assets_css">
+      <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet"></link>
+    </template>
 
     <template id="assets_js" name="assets_js">
       <script src="/{{module_name}}/static/src/js/dist/build.js"></script>
